Mise à jour de la commande init avec les derniers ajouts du projet