@@ -1,21 +1,25 @@
 package ch.heigvd.dil.subcommands;
 
-
 import ch.heigvd.dil.util.HTMLConverter;
-import picocli.CommandLine;
+import picocli.CommandLine.Parameters;
+import picocli.CommandLine.ExitCode;
 import picocli.CommandLine.Command;
 
 import java.io.*;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.concurrent.Callable;
 
+/**
+ * @author Loïc Rosset
+ */
 @Command(name = "init", description = "Subcommand init !")
 public class InitCmd implements Callable<Integer> {
 
-    @CommandLine.Parameters(arity = "1", description = "Pas de chemins specifie.") String path;
+    @Parameters(arity = "1", description = "Root path for the init site.")
+
+    private Path path;
+
     @Override
     public Integer call() {
         System.out.println("Init command !");
@@ -24,34 +28,33 @@ public class InitCmd implements Callable<Integer> {
             createFolder(path);
         } catch (IOException e) {
             e.printStackTrace();
-            System.out.println("Impossibilite de creer le dossier fournit.");
-            return -1;
+            System.out.println("The folders provided as parameters  cannot be created.");
+            return ExitCode.USAGE;
         }
 
-        Path filePath = Paths.get(path, "index.html");
-        String copyFilename = "index.default.md";
+        Path filePath = path.resolve("index.html");
+        Path copyPath = path.resolve("index.default.md");
 
         try {
-            deleteFile(path, copyFilename);
-            Files.copy(getResourceAsStream(copyFilename), Paths.get(path , copyFilename));
-            Files.write(filePath, HTMLConverter.convertMarkdownFiles(path + "/" + copyFilename).getBytes(StandardCharsets.UTF_8));
-            deleteFile(path, copyFilename);
+            deleteFile(copyPath);
+            Files.copy(getResourceAsStream("index.default.md"), copyPath);
+            Files.writeString(filePath, HTMLConverter.fromMarkdown(Files.readString(copyPath)));
+            deleteFile(copyPath);
         } catch (IOException e) {
             try{
-                deleteFile(path, "index.html");
+                deleteFile(filePath);
             } catch (IOException ex) {
-                System.out.println("Impossibilite de supprimer le fichier d'index. Celui-ci est errone.");
+                System.out.println("The system had a problem during the creation of the index and cannot delete it.");
             }
-            System.out.println("Impossibilite de mettre a jour le fichier d'index.");
-            return -1;
+            System.out.println("The index file cannot be created or updated.");
+            return ExitCode.USAGE;
         }
 
-        return 0;
+        return ExitCode.OK;
     }
 
     /**
      * Retourne un InputStream sur le fichier de resource passé en paramètre.
-     *
      * @param fileName le nom du fichier de resource
      * @return un InputStream sur le fichier
      * @throws IOException si le fichier ne peut pas être ouvert
@@ -65,38 +68,20 @@ public class InitCmd implements Callable<Integer> {
     }
 
     /**
-     * Création d'un fichier
-     * @param path Chemin du fichier
-     * @param fileName Nom du fichier
-     * @throws IOException Si sa création ne fonctionne pas
-     */
-    private Path createFile(String path, String fileName) throws IOException {
-        Path p = Paths.get(path, fileName);
-
-        if (!Files.exists(p)) {
-            Files.createFile(p);
-        }
-        return p;
-    }
-
-    /**
      * Création d'un dossier
      * @param path Chemin du dossier
      * @throws IOException Si sa création ne fonctionne pas
      */
-    private void createFolder(String path) throws IOException {
-        Path p = Paths.get(path);
-        Files.createDirectories(p);
+    private void createFolder(Path path) throws IOException {
+        Files.createDirectories(path);
     }
 
     /**
      * Suppression d'un fichier s'il existe
      * @param path Chemin du fichier
-     * @param fileName Nom du fichier
      * @throws IOException Si sa suppression ne fonctionne pas
      */
-    private void deleteFile(String path, String fileName) throws IOException {
-        Path p = Paths.get(path, fileName);
-        Files.deleteIfExists(p);
+    private void deleteFile(Path path) throws IOException {
+        Files.deleteIfExists(path);
     }
 }
